--- a/index.html
+++ b/index.html
@@ -1,114 +1,347 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en" class="no-js"><!--<![endif]-->
+
+<head>
+
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel="dns-prefetch" href="//www.google-analytics.com">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<link rel="canonical" href="https://www.mayarariss.com">
+	<title>Mayar Ariss</title>
+	<meta name="description" content="Urban Design + Engineering">
+	<meta name="robots" content="index,follow">
+	<meta name="keywords" content>
+	<meta itemprop="name" content="Mayar Ariss">
+	<meta property="og:title" content="Mayar Ariss">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://www.mayarariss.com">
+	<meta property="og:image" content="/images/profilepic.jpeg">
+	<meta property="og:image:width" content="2308">
+	<meta property="og:image:height" content="1154">
+	<meta property="og:image:type" content="image/jpeg">
+
+	<meta itemprop="description" content="Urban Design + Engineering">
+	<!-- <link rel="shortcut icon" href="">
+	<link rel="icon" href="" type="image/x-icon"> -->
+
+	<link rel="stylesheet" href="css/build.min.css">
+	<link rel="icon" type="image/png" href="images/pixelprof.png" />
+	<script async src="js/analytics.js"></script>
+	<script src="js/modernizr.min.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="https://www.mayarariss.com/assets/js/vendor/jquery.min.js">\x3C/script>')</script>
+	<script src="js/jquery.min_1.js"></script>
 
 
-<html lang="fr">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="description" content="">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <title>Mayar Ariss – Researcher</title>
-    <meta name="description" content="Mayar Ariss – Researcher">
-    <meta name="image" content="https://mayarariss.com/site-thumbnail.jpg">
-    <meta itemprop="name" content="Mayar Ariss – Researcher">
-    <meta itemprop="description" content="Mayar Ariss – Researcher">
-    <meta itemprop="image" content="https://mayarariss.com/site-thumbnail.jpg">
-    <meta name="og:title" content="Mayar Ariss">
-    <meta name="og:description" content="Mayar Ariss - Researcher.">
-    <meta name="og:image" content="https://mayarariss.com/site-thumbnail.jpg">
-    <meta name="og:url" content="https://mayarariss.com">
-    <meta name="og:site_name" content="Mayar Ariss – Researcher">
-    <meta name="og:locale" content="fr_FR">
-    <meta name="og:type" content="website">
-    <title></title>
-    <link rel="stylesheet" href="dist/css/style.min.css">
-    <link rel="icon" type="image/png" href="dist/pixelprof.png" />
-    <script src="dist/js/site.min.js"></script>
-  </head>
- 
-  <body data-theme="0">
-          <header class="fixed-top d-flex justify-content-between px-1 color-alt">
-  <nav class="d-flex">
-    <a href="#projects" class="px-1 active">Projects</a>
-    <a href="#about" class="px-1">Apropos</a>
-  </nav>
-  <p class="text-uppercase">Mayar Ariss</p>
-</header>
-    
-      <div class="line-vertical"></div> 
-  <div class="line-vertical line-right"></div>
-  <div class="line-horizontal" style="--y-char:1"></div>
+</head>
 
-  <div id="projects" class="content scrollable-area">
-    <div class="d-flex sticky-top bg-main text-uppercase">
-      <div class="flex-grow-1 bd-highlight col-title">Title</div>
-      <div class="col-client d-none d-md-block">Institution</div>
-      <div class="col-date">Date</div>
-    </div>
-    <div id="project-list scrollable-content">
+<body>
 
-      <a href="https://gammarelief.org/" target="_blank" class="project d-flex " data-type="MIT">
-        <div class="flex-grow-1 col-title position-relative">GAMMA Relief</div>
-        <div class="col-client d-none d-md-block">MIT</div>
-        <div class="col-date">2023</div>
-      </a>
+	<div id="outdated">
+		<div class="inner">
+			<p class="browserupgrade">You are using an <strong>outdated</strong> browser.
+				<br>Please <a href="http://outdatedbrowser.com" target="_blank">upgrade your browser</a> to improve your
+				experience.
+			</p>
+		</div>
+	</div>
 
-                              <a href="http://senseable.mit.edu/cityscanner/" target="_blank" class="project d-flex " data-type="MIT">
-        <div class="flex-grow-1 col-title position-relative">City Scanner</div>
-        <div class="col-client d-none d-md-block">MIT</div>
-        <div class="col-date">2023</div>
-      </a>
-                              <a href="contagious_songs.html" target="_blank" class="project d-flex " data-type="Imperial College London">
-        <div class="flex-grow-1 col-title position-relative">Contagious Songs</div>
-        <div class="col-client d-none d-md-block">Imperial College London</div>
-        <div class="col-date">2022</div>
-      </a>
-                              <a href="mail_drones.html" target="_blank" class="project d-flex " data-type="Imperial College London">
-          <div class="flex-grow-1 col-title position-relative">Mail Drones</div>
-          <div class="col-client d-none d-md-block">Imperial College London</div>
-          <div class="col-date">2022</div>
-        </a>
-                              <a href="mind_your_step.html" target="_blank" class="project d-flex " data-type="Imperial College London">
-          <div class="flex-grow-1 col-title position-relative">Mind Your Step</div>
-          <div class="col-client d-none d-md-block">Imperial College London</div>
-          <div class="col-date">2022</div>
-        </a>
-      
-          </div>
-  </div>
-  <div id="about" class="content scrollable-area d-none">
-    <div class="scrollable-content">
-        <p class="mb-1">Born in Ohio, USA, to a Lebanese father and a Syrian mother, Mayar completed his secondary education in Paris, France. In 2018, he enrolled at <a href="https://www.epfl.ch/" target="_blank" class="color-alt">École polytechnique fédérale de Lausanne (EPFL)</a> as an environmental sciences and engineering student. He is now an MEng candidate in civil and environmental engineering at <a href="https://www.imperial.ac.uk/" target="_blank" class="color-alt">Imperial College London</a>.</p>
-        <p class="mb-1">Throughout his studies, Mayar conducted research on econometric modelling of travel demand, and network performance and equilibrium. He also gained expertise in nonlinear structural analysis and computational engineering analysis.</p>        
-        <p class="mb-1">In 2023, Mayar joined <a href="https://web.mit.edu/" target="_blank" class="color-alt"> MIT</a> as a visiting student to undertake research at <a href="https://senseable.mit.edu/" target="_blank" class="color-alt">Senseable City Lab</a>. His research currently involves developing optimisation models to maximise the monitoring of urban environments through drive-by sensing.</p>        
-        <p class="mb-1">Mayar is a student member at <a href="https://www.theiet.org" target="_blank" class="color-alt"> IET</a>, <a href="https://www.ice.org.uk" target="_blank" class="color-alt"> ICE</a>, and a permanent CEM YPN member of <a href="https://www.iucn.org/" target="_blank" class="color-alt"> IUCN</a>, where he is part of the Urban and Mediterranean-type Ecosystems task forces.</p>
-        <p class="mb-1">
-        - <a href="mailto:mayar313@mit.edu" class="color-alt">Email</a> 
-        <p class="mb-1">  
-        - <a href="https://www.linkedin.com/in/mayar-ariss/" class="color-alt">LinkedIn</a>
-        <p class="mb-1">  
-      </p>
-    </div>
-  </div>
-  <div id="scrollbar">
-  <a href="#" class="btn-scroll-up color-alt">↑</a>
-  <a href="#" class="btn-scroll-down color-alt">↓</a>
-</div>  <div id="appear" class="position-fixed">
-    <div class="line line-1"></div>
-    <div class="line line-fill"></div>
-  </div>
+	<div class="loader">
+		<div class="spinner">
+			<svg class="circular" viewBox="25 25 50 50">
+				<circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="1" stroke-miterlimit="10" />
+			</svg>
+		</div>
+	</div>
 
-          <footer class="fixed-bottom d-flex justify-content-between pe-1 color-alt">
-  <div class="d-flex">
-    <a href="#" id="btn-toggle-color" class="px-1">F1=Colors</a>
-    <a href="#" id="btn-toggle-filter" class="px-1 d-none d-md-block">F2=Filter</a>  
-  </div>
-  <span class="text-uppercase">Researcher</span>
-</footer>
-      </body>
+	<header>
+		<div id="site-title"><a href="#landing" data-scroll>
+				<h4>Mayar Ariss</h4>
+			</a></div>
+		<div id="connect-link"><a href="#connect" data-scroll>
+				<h4>À Propos</h4>
+			</a></div>
+	</header>
 
+	<div id="container">
+		<section id="landing">
+			<!-- <div class="galaxy md-hide">
+	<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		 viewBox="0 0 1280 800" style="enable-background:new 0 0 1280 800;" xml:space="preserve" preserveAspectRatio="xMidYMin">
+	<ellipse id="el1" class="st0 hide" cx="640" cy="400" rx="90" ry="1"/>
+	<ellipse id="el2" class="st0 hide" cx="640" cy="400" rx="900" ry="90"/>
+	<ellipse id="el3" class="st0 hide" cx="640" cy="400" rx="900" ry="400"/>
+	<ellipse id="el4" class="st0 hide" cx="640" cy="400" rx="900" ry="270"/>
+	<ellipse id="el5" class="st0 hide" cx="640" cy="400" rx="900" ry="600"/>
+	</svg>
+	</div> -->
+			<div id="site-title">
+				<h1>Mayar Ariss</h1>
+				<h5>Urban Design + Engineering</h5>
+			</div>
+		</section>
+
+
+		<section id="selected-projects">
+
+			<h5>Selected projects</h5>
+
+
+			<div class="project">
+
+				<a href="http://www.gammarelief.org" target="_blank">
+					<h2 class="project-title">GAMMA Relief</h2>
+				</a>
+				<div class="link">
+					gammarelief.org </div>
+				<div class="infos">
+					<span class="year">2023</span>
+					<span><a href="https://www.imperial.ac.uk" target="_blank">Imperial College London</a></span><span
+						class="checked"></span>
+					<span><a href="https://www.mit.edu" target="_blank">MIT</a></span>
+				</div>
+				<div class="video">
+
+					<img class="lazyload" data-src="https://www.mayarariss.com/ezgif_gamma.gif"  alt="GAMMA"
+						width="70%" height="auto">
+				</div>
+			</div>
+
+
+			<div class="project">
+
+				<a href="http://senseable.mit.edu/urban-sensing/" target="_blank">
+					<h2 class="project-title">City Scanner</h2>
+				</a>
+				<div class="link">
+					senseable.mit.edu/urban-sensing/ </div>
+				<div class="infos">
+					<span class="year">2023</span>
+					<span><a href="https://www.mit.edu" target="_blank">MIT</a></span> <span class="checked"> </span>
+					<span><a href="https://senseable.mit.edu" target="_blank">senseable city lab</a></span>
+				</div>
+				<div class="video">
+					<!-- <ul class="ui"><li></li><li></li><li></li></ul> -->
+					<video preload="none" loop muted
+						data-poster="https://www.mayarariss.com/media/US.gif"
+						width="100%" height="100%">
+						<source src="./media/USquick.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+					<img class="lazyload"
+						data-src="https://www.mayarariss.com/media/US.gif"
+						alt="CS" width="100%" height="auto">
+				</div>
+			</div>
+
+
+			<div class="project">
+
+				<a href="./contagious_songs.html" target="_blank">
+					<h2 class="project-title">Contagious Songs</h2>
+				</a>
+				<div class="link">
+					mayarariss.com/contagious_songs </div>
+				<div class="infos">
+					<span class="year">2022</span>
+					<span><a href="https://www.imperial.ac.uk" target="_blank">Imperial College London</a></span>
+				</div>
+
+				<div class="video">
+
+					<img class="lazyload" data-src="https://www.mayarariss.com/contagious_songs/assets/windapp.gif"  alt="contagioussongs"
+						width="70%" height="auto">
+				</div>
+
+			</div>
+
+
+			<div class="project">
+
+				<a href="./mail_drones.html" target="_blank">
+					<h2 class="project-title">Mail Drones</h2>
+				</a>
+				<div class="link">
+					mayarariss.com/mail_drones </div>
+				<div class="infos">
+					<span class="year">2022</span>
+					<span><a href="https://www.imperial.ac.uk" target="_blank">Imperial College London</a></span><span
+						class="checked"> </span>
+					<span><a href="https://transport-systems.imperial.ac.uk/" target="_blank">Transport Systems &
+							Logistics Lab</a></span>
+				</div>
+
+				<div class="video">
+
+					<img class="lazyload" data-src="https://www.mayarariss.com/mail_drones/ezgif_mail.gif" alt="maildrones"
+						width="100%" height="auto">
+				</div>
+
+		
+			</div>
+
+
+
+			<div class="project">
+
+				<a href="./mind_your_step.html" target="_blank">
+					<h2 class="project-title">Mind your Step</h2>
+				</a>
+				<div class="link">
+					mayarariss.com/mind_your_step </div>
+				<div class="infos">
+					<span class="year">2022</span>
+					<span><a href="https://www.imperial.ac.uk" target="_blank">Imperial College London</a></span><span
+						class="checked"> </span>
+					<span><a href="https://transport-systems.imperial.ac.uk/" target="_blank">Transport Systems &
+							Logistics Lab</a></span>
+				</div>
+
+				<div class="video">
+
+					<img class="lazyload" data-src="https://www.mayarariss.com/mys/assets/ezgif2_mys.gif" alt="mys"
+						width="100%" height="auto">
+				</div>
+			</div>
+
+
+		</section>
+
+		<section id="connect">
+
+			<div class="inner">
+
+
+
+				<h3>À Propos</h3>
+				<br><br>
+
+				<p style=" line-height: 120% ; font-size: 21px  ; padding-right: 40px ; padding-left: 40px">Born in
+					Ohio, USA, to a Lebanese father and a Syrian mother, Mayar completed his secondary education in
+					Paris, France. In 2018, he enrolled at <a href="https://www.epfl.ch"
+						style="color:black; background-color: #FFFFFF;"
+						onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+						onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+						rel="noopener noreferrer" target="_blank">
+						École polytechnique fédérale de Lausanne (EPFL)
+					</a>
+					as an Environmental Sciences and Engineering student. He is now an MEng in Civil and
+					Environmental Engineering at <a href="https://www.imperial.ac.uk"
+						style="color:black; background-color: #FFFFFF;"
+						onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+						onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+						rel="noopener noreferrer" target="_blank">
+						Imperial College London
+					</a>.
+					<br><br>
+
+					In 2023, Mayar joined <a href="https://www.mit.edu" style="color:black; background-color: #FFFFFF;"
+						onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+						onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+						rel="noopener noreferrer" target="_blank">
+						MIT
+					</a>
+					as a visiting student at <a href="https://www.senseable.mit.edu"
+						style="color:black; background-color: #FFFFFF;"
+						onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+						onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+						rel="noopener noreferrer" target="_blank">
+						Senseable City Lab
+					</a>. His research currently involves developing optimisation models to maximise the spatial and temporal monitoring of
+					urban environmental qualities through drive-by sensing.
+
+					Mayar is also part of the <a href="https://www.ice.org.uk/" style="color:black; background-color: #FFFFFF;"
+						onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+						onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+						rel="noopener noreferrer" target="_blank">
+						ICE
+					</a>, <a href="https://www.theiet.org/"
+					style="color:black; background-color: #FFFFFF;"
+					onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+					onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+					rel="noopener noreferrer" target="_blank">
+					IET
+				</a>, <a href="https://www.rigb.org/" style="color:black; background-color: #FFFFFF;"
+					onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+					onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+					rel="noopener noreferrer" target="_blank">
+					Ri
+				</a>, and a permanent CEM YPN member of <a href="https://www.iucn.org/"
+						style="color:black; background-color: #FFFFFF;"
+						onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+						onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+						rel="noopener noreferrer" target="_blank">
+						IUCN
+					</a>, where he is involved in the Urban and Mediterranean-type Ecosystems task forces.
+				</p>
+
+
+			</div>
+
+
+		</section>
+
+
+
+		<section id="connect">
+
+			<div class="inner">
+
+				<img src="./images/profilepic.jpeg" alt="" height="120" >
+
+
+				<h3>Connect</h3>
+				<div class="list">
+					<!-- <p><a href="https://github.com/mayar-ariss" rel="noopener noreferrer" target="_blank">GitHub</a>
+					</p> -->
+					<p><a href="https://www.linkedin.com/in/mayar-ariss/" rel="noopener noreferrer"
+							target="_blank">LinkedIn</a></p>
+					<p><a href="mailto:mayar313@mit.edu">Write</a></p>
+				</div>
+			</div>
+
+			<div id="discover">
+				<div id="discover-images" class="md-hide"></div>
+
+				<script>
+					var discover = [["https:\/\/www.tristanbagot.com\/thumbs\/algorithms\/soon-800x1198.jpg"], ["https:\/\/www.tristanbagot.com\/thumbs\/graphics\/soon-800x1198.jpg"], ["https:\/\/www.tristanbagot.com\/thumbs\/photography\/soon-800x1198.jpg"]];
+				</script>
+			</div>
+
+		</section>
+
+		<footer>
+			<span>
+				<h5>© 2023, All rights reserved</h5>
+			</span>
+			<span>
+				<h5>Typeface : <a href="https://github.com/raphaelbastide/Terminal-Grotesque" target="_blank">Terminal
+						Grotesque</a></h5>
+			</span>
+		</footer>
+
+	</div>
+
+	<!-- Google Analytics-->
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+		ga('create', 'UA-38254300-6', 'auto');
+		ga('send', 'pageview');
+	</script>
+	<script>
+		var $sitetitle = 'Mayar Ariss';
+	</script>
+	<script src="js/plugins.js"></script>
+	<script src="js/app.min.js"></script>
+
+
+</body>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8KQHDKK1R6"></script>
 <script>
