--- a/index.html
+++ b/index.html
@@ -90,16 +90,41 @@
 
 			<div class="project">
 
+				<a href="https://www.senseable.mit.edu" target="_blank">
+					<h2 class="project-title">Cooling Path</h2>
+				</a>
+				<!-- <div class="link">
+					gammarelief.org </div> -->
+				<div class="infos">
+					<span class="year">2023</span>
+					<span><a href="https://www.mit.edu" target="_blank">MIT</a></span>
+
+					<span class="checked"></span>
+					<span><a href="https://senseable.mit.edu" target="_blank">senseable city lab</a></span>
+					<span class="checked"></span>
+					<span><a href="https://www.dubaifuture.ae/" target="_blank">dubai future labs</a></span>
+
+				</div>
+				<!-- <div class="video">
+
+					<img class="lazyload" data-src="https://www.mayarariss.com/ezgif_gamma.gif"  alt="GAMMA"
+						width="70%" height="auto">
+				</div> -->
+			</div>
+
+			<div class="project">
+
 				<a href="http://www.gammarelief.org" target="_blank">
 					<h2 class="project-title">GAMMA Relief</h2>
 				</a>
-				<div class="link">
-					gammarelief.org </div>
+
 				<div class="infos">
 					<span class="year">2023</span>
-					<span><a href="https://www.imperial.ac.uk" target="_blank">Imperial College London</a></span><span
-						class="checked"></span>
 					<span><a href="https://www.mit.edu" target="_blank">MIT</a></span>
+
+					<span class="checked"></span>
+					<span><a href="https://senseable.mit.edu" target="_blank">senseable city lab</a></span>
+
 				</div>
 				<div class="video">
 
@@ -114,8 +139,7 @@
 				<a href="http://senseable.mit.edu/urban-sensing/" target="_blank">
 					<h2 class="project-title">City Scanner</h2>
 				</a>
-				<div class="link">
-					senseable.mit.edu/urban-sensing/ </div>
+
 				<div class="infos">
 					<span class="year">2023</span>
 					<span><a href="https://www.mit.edu" target="_blank">MIT</a></span> <span class="checked"> </span>
@@ -141,8 +165,7 @@
 				<a href="./contagious_songs.html" target="_blank">
 					<h2 class="project-title">Contagious Songs</h2>
 				</a>
-				<div class="link">
-					mayarariss.com/contagious_songs </div>
+
 				<div class="infos">
 					<span class="year">2022</span>
 					<span><a href="https://www.imperial.ac.uk" target="_blank">Imperial College London</a></span>
@@ -162,8 +185,7 @@
 				<a href="./mail_drones.html" target="_blank">
 					<h2 class="project-title">Mail Drones</h2>
 				</a>
-				<div class="link">
-					mayarariss.com/mail_drones </div>
+
 				<div class="infos">
 					<span class="year">2022</span>
 					<span><a href="https://www.imperial.ac.uk" target="_blank">Imperial College London</a></span><span
@@ -188,8 +210,7 @@
 				<a href="./mind_your_step.html" target="_blank">
 					<h2 class="project-title">Mind your Step</h2>
 				</a>
-				<div class="link">
-					mayarariss.com/mind_your_step </div>
+
 				<div class="infos">
 					<span class="year">2022</span>
 					<span><a href="https://www.imperial.ac.uk" target="_blank">Imperial College London</a></span><span
@@ -248,9 +269,16 @@
 						onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
 						rel="noopener noreferrer" target="_blank">
 						Senseable City Lab
-					</a>. His research currently involves developing optimisation models to maximise the spatial and temporal monitoring of
-					urban environmental qualities through drive-by sensing.
+					</a>. His research involved developing optimisation models to maximise the spatial and temporal monitoring of
+					urban environmental qualities through drive-by sensing. Later interning at the <a href="https://www.dubaifuture.ae/"
+					style="color:black; background-color: #FFFFFF;"
+					onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
+					onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
+					rel="noopener noreferrer" target="_blank">
+					Dubai Future Labs
+				</a>, he developed and validated a model for pedestrian dynamics, based on discrete choice modeling.
 
+					<br><br>
 					Mayar is also part of the <a href="https://www.ice.org.uk/" style="color:black; background-color: #FFFFFF;"
 						onmouseover="this.style.backgroundColor='#000000'; this.style.color='#FFFFFF';"
 						onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.color='black';"
@@ -295,6 +323,8 @@
 				<div class="list">
 					<!-- <p><a href="https://github.com/mayar-ariss" rel="noopener noreferrer" target="_blank">GitHub</a>
 					</p> -->
+					<p><a href="https://www.instagram.com/mvyar/" rel="noopener noreferrer"
+						target="_blank">Instagram</a></p>
 					<p><a href="https://www.linkedin.com/in/mayar-ariss/" rel="noopener noreferrer"
 							target="_blank">LinkedIn</a></p>
 					<p><a href="mailto:mayar313@mit.edu">Write</a></p>
