--- a/mail_drones.html
+++ b/mail_drones.html
@@ -156,6 +156,9 @@
               Authority</span></a>. With Python, the geospatial data is generated using GeoPandas. Then, the locations
           of the optimal combination of depots is determined using PulP.
           <br /><br />
+          Economic constraints are set considering the total initial budget, depot rent, operating costs, and
+          average revenue of which a certain percentage is set aside for further expansion. New warehouses are
+          established every two months, providing enough funds are available to cover their cost of operation.
         </p><!-- /col -->
       </div>
 
@@ -170,9 +173,9 @@
     <div class="container">
       <div class="row" style="margin:40px">
         <div class="body-text-release">
-          <h2>Paper Release</h2>
+          <h2>Study Release</h2>
 
-          <span class="Press-mid">The paper is available upon request. <br><br> Material on this web site can be used
+          <span class="Press-mid">The study is available upon request. <br><br> Material on this web site can be used
             freely <br>in any publication provided
             that:
           </span>
