--- a/mind_your_step.html
+++ b/mind_your_step.html
@@ -20,18 +20,19 @@
     <meta property="og:url" content="https://mayarariss.com">
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="icon" type="image/png" href="dist/pixelprof.png" />
+    <!-- <link rel="icon" type="image/png" href="mys/assets/logos/tsl_logo.png"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <link rel="icon" type="image/png" href="dist/pixelprof.png" />
 
 
 
 </head>
 
 <body>
-    
-     <section class="openingvideo">
+    <!-- <section class="openingvideo">
 
         <div class="Intropage">
             <div>
@@ -43,7 +44,7 @@
             <div class="fillBackground" id="backgroundFill"></div>
         </div>
 
-    </section> 
+    </section> -->
 
 
 
@@ -218,7 +219,7 @@
                     (step-free or non step-free) and popularity (arriving / departing passengers). The journeys can
                     then
                     be identified as fully or partially step-free. Finally, the optimisation model is implemented in
-                    Python, using both NetworkX, Pandas and PulP.
+                    Python, using NetworkX, Pandas and PulP.
                 </div>
 
             </div>
@@ -231,10 +232,10 @@
         <section class="intro_text">
             <div class="grid-container_text citytext_Laval ">
                 <div>
-                    <div class="Title_sec">Paper Release</div>
+                    <div class="Title_sec">Study Release</div>
 
                     <div class="text_container">
-                        <span class="Press-mid">The paper is available upon request. <br><br> Material on this web
+                        <span class="Press-mid">The study is available upon request. <br><br> Material on this web
                             site
                             can be used freely <br>in any publication provided
                             that:
